# ntut_electricity_bill_bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  TEST_EXAMPLES.md  api.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  test_daily_summary.py  test_notification_levels.py
.claude/: settings.local.json
.github/workflows/: docker-image.yml
src/crawler/: ntut_crawler.py
src/database/: database.py  models.py
src/notifier/: __init__.py  base.py  discord.py  levels.py  manager.py  telegram.py  webhook.py
src/scheduler/: scheduler.py
src/utils/: chart_generator.py  logger.py  settings.py
